# bookstore

./: .db.sqlite3  Dockerfile  MAKEFILE  README.md  docker-compose.yml  env.dev  heroku.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  workflow-pr.yml
api/: urls.py  views.py
bookstore/: asgi.py  settings.py  urls.py  views.py  wsgi.py
bookstore/templates/: hello_world.html
order/: admin.py  factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: __init__.py  order_serializer.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: __init__.py  order_viewset.py
product/: admin.py  factories.py  urls.py
product/migrations/: 0001_initial.py
product/models/: __init__.py  category.py  product.py
product/serializers/: __init__.py  category_serializer.py  product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: __init__.py  category_viewset .py  product_viewset.py
tests/models/: test_category.py  test_order.py  test_product.py
